Bug 691647 - -dConvertCMYKImagesToRGB no longer works
Summary: -dConvertCMYKImagesToRGB no longer works
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Windows Vista
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-27 09:40 UTC by Ken Sharp
Modified: 2010-10-05 12:53 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ken Sharp 2010-09-27 09:40:38 UTC
Since the ICC colour handling, pdfwrite no longer sees images in their 
original colour space, but instead sees all images as being in an ICCBased 
space.

The conversion of CMYK images to RGB depends on knowing that the image was 
originally in CMYK and so no longer works.

This may also have implications for the ColorConversionStrategy control.
Comment 1 Ken Sharp 2010-10-05 12:53:07 UTC
Fixed in revision 11755, patch here:

http://ghostscript.com/pipermail/gs-cvs/2010-October/011782.html